--- a/src/SCSS/styles.scss
+++ b/src/SCSS/styles.scss
@@ -3,14 +3,19 @@
 
 header {
   width: 100%;
-  position: fixed;; //needed for logo placement
-  background-color: $lt-gray;
-  height: 90px;
+  position: relative;
+  height: 430px;
+  margin-bottom: -40px;
+  @include linearGradient(#DB00FF, #3023AE);
+
   .logo {
     position: absolute;
     left: 15px; top: 50%;
     @include translateY(-50%);
   }
+  .social {position: absolute; left: 0;}
+  ul {list-style:none;}
+  ul li {display:inline-block;list-style:none;}
 
 nav,
 nav ul,
@@ -20,27 +25,60 @@ nav ul li {
 }
 nav {
     position: absolute;
-    right: 15px; top: 50%;
+    right: 5%; top: 5%;
     @include translateY(-50%);
     ul li {
       list-style: none;
       display: inline-block;
       margin-right: 20px;
+      background-color: #DB00FF;
     }
     ul li a{
-      color: $black-light;
+      color: $white;
+
     }
     ul li a.active{
-      color: $red;
+      color: $brandYellow;
+      font-weight: bold;
+      border-bottom: 2px solid $brandYellow;
     }
   }
-
+  h1 {
+      left: 10%;
+      top: 25%;
+      -webkit-transform: translateY(-50%);
+      transform: translateY(-100%);
+      color: black;
+      position: absolute;
+      height: 50px;
+      font-size: 4em;
+      font-family: seaweed-script, cursive;
+      z-index: 9999; /*poistions h1 above images*/
+    }
 } //end of Header
 
+img.whiteboard {
+  position: absolute;
+  top: 30px;
+  right: 0;
+  max-width: 50%;
+}
+img.dude {
+  position: ABSOLUTE;
+  right: 70px;
+  /* max-width: 280px; */
+  bottom: 0px;
+  /* float: right; */
+  max-width: 26%;
+}
+svg {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 16vw;
+  z-index: 9999;
+  /* set height to pixels if you want angle to change with screen width */
+}
+ 
 
 p {color:#666}
-h1 {font-family: 'Staatliches', cursive; font-size: 42px;}
-
-.push-down {
-  padding-top: 90px; //pushes page down
-}
