Added in media queries and paralaxing on body content

--- a/src/SCSS/_config.scss
+++ b/src/SCSS/_config.scss
@@ -26,7 +26,7 @@
 }
 
 .glow {
-  font-size: 80px;
+  
   color: #000;
   text-align: center;
   -webkit-animation: glow 1s ease-in-out infinite alternate;
@@ -52,10 +52,9 @@ $gray: #666666;
 $lt-gray: #f5f5f5;
 $white: #ffffff;
 $red: #FF0000;
-$primary: #038BAF;
+$primary: #3023AE;
 $brandYellow:#F8E71C;
-
-$btn-hover-color: pink;
+$btn-hover-color: $brandYellow;
 $border: #e1e1e1;
 
 html {background-color: $white;}
