--- a/src/SCSS/styles.scss
+++ b/src/SCSS/styles.scss
@@ -5,33 +5,42 @@ header {
   width: 100%;
   position: relative;
   height: 430px;
-  margin-bottom: -40px;
+  margin-bottom: -9px;
   @include linearGradient(#DB00FF, #3023AE);
 
-  .logo {
+  svg {
     position: absolute;
-    left: 15px; top: 50%;
-    @include translateY(-50%);
+    bottom: 0;
+    width: 100%;
+    height: 16vw;
+    z-index: 9999;
+    /* set height to pixels if you want angle to change with screen width */
   }
-  .social {position: absolute; left: 0;}
+  .twitterlink,
+  .linkedInlink
+  {
+    padding-left:15px;
+    color: $brandYellow
+  }
+  .social {margin: 0;padding: 0;}
+  .social svg {position: relative;}
   ul {list-style:none;}
-  ul li {display:inline-block;list-style:none;}
-
+  ul li {display:inline-block;list-style:none; margin-left: 10px
+}
+.navbar {color: $brandYellow;}
 nav,
 nav ul,
 nav ul li {
-  margin: 0;
-  padding: 0;
+
 }
 nav {
-    position: absolute;
-    right: 5%; top: 5%;
+    z-index: 9999;
     @include translateY(-50%);
     ul li {
       list-style: none;
       display: inline-block;
       margin-right: 20px;
-      background-color: #DB00FF;
+
     }
     ul li a{
       color: $white;
@@ -44,16 +53,18 @@ nav {
     }
   }
   h1 {
-      left: 10%;
-      top: 25%;
+      left: 20%;
+      top: 2%;
+      width: 300px;
       -webkit-transform: translateY(-50%);
       transform: translateY(-100%);
       color: black;
       position: absolute;
       height: 50px;
-      font-size: 4em;
-      font-family: seaweed-script, cursive;
-      z-index: 9999; /*poistions h1 above images*/
+      font-size: 159px;
+      font-family: 'DarkHeartScript';
+      font-weight: lighter;
+      z-index: 9999; /* h1 above images*/
     }
 } //end of Header
 
@@ -63,22 +74,34 @@ img.whiteboard {
   right: 0;
   max-width: 50%;
 }
-img.dude {
+img.dude, img.dude2 {
   position: ABSOLUTE;
-  right: 70px;
-  /* max-width: 280px; */
-  bottom: 0px;
-  /* float: right; */
-  max-width: 26%;
+    right: 12%;
+    bottom: 0;
+    max-width: 30%;
+    z-index: 999;
 }
-svg {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 16vw;
-  z-index: 9999;
-  /* set height to pixels if you want angle to change with screen width */
-}
- 
+
+.skillblocks svg {font-size: 100px;}
 
 p {color:#666}
+
+.skillTitle {
+  width: 100%;
+  display: block;
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: -10px;
+}
+
+@font-face {
+	font-family: 'DarkHeartScript';
+	src: url('./darkheart-script.eot');
+	src: url('./darkheart-script.eot?#iefix') format('embedded-opentype'),
+             url('./darkheart-script.woff2') format('woff2'),
+	     url('./darkheart-script.woff') format('woff'),
+	     url('./darkheart-script.ttf') format('truetype'),
+	     url('./darkheart-script.svg#youworkforthem') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
