--- a/src/SCSS/_config.scss
+++ b/src/SCSS/_config.scss
@@ -26,7 +26,6 @@
 }
 
 .glow {
-  
   color: #000;
   text-align: center;
   -webkit-animation: glow 1s ease-in-out infinite alternate;
@@ -43,16 +42,15 @@
   }
 }
 
-
-
 //sass shit
 $black: #000000;
 $black-light: #333333;
-$gray: #666666;
+$gray: #555555;
 $lt-gray: #f5f5f5;
 $white: #ffffff;
 $red: #FF0000;
 $primary: #3023AE;
+$secondary:#c1e8f1;
 $brandYellow:#F8E71C;
 $btn-hover-color: $brandYellow;
 $border: #e1e1e1;
