Casestudy linking and template

--- a/src/SCSS/styles.scss
+++ b/src/SCSS/styles.scss
@@ -1,20 +1,22 @@
 @import "_config.scss";
 //@import "_andy.scss";
 
-.body-container h3 {font-size: 18px; color: #3023AE;}
+.CsHeader {font-size: 90px; font-family: 'Staatliches', cursive; color: $gray;}
+h3 {font-size: 45px; font-family: 'Staatliches', cursive; color: $gray; text-transform: uppercase;}
+p {color:$gray; font-size: 16px; line-height:26px; margin-bottom: 30px}
 
 header {
   width: 100%;
   position: relative;
-  height: 430px;
-  margin-bottom: -9px;
+  height: 420px;
+  margin-bottom: 0px;
   @include linearGradient(#DB00FF, #3023AE);
 
   svg {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 16vw;
+    height: 50px;
     z-index: 9999;
     /* set height to pixels if you want angle to change with screen width */
   }
@@ -63,11 +65,13 @@ nav {
       color: $secondary;
       position: absolute;
       height: 50px;
-      font-size: 159px;
+      font-size: 260px;
       font-family: 'DarkHeartScript';
       font-weight: lighter;
       z-index: 9999; /* h1 above images*/
+      margin: 90px 0;
     }
+
 } //end of Header
 
 img.whiteboard {
@@ -79,12 +83,36 @@ img.whiteboard {
 img.dude, img.dude2 {
   position: ABSOLUTE;
     right: 12%;
-    bottom: 0;
+    bottom: 1px;
     max-width: 340px;
     z-index: 999;
 }
 
-p {color:$gray}
+
+.cs_top_banner {
+  height: 550px;
+  width: 1200px;
+  margin:0 auto;
+  position: relative;
+}
+.phoneParallax {
+  position: absolute;
+    left: 850px;
+    top: 70px;
+    z-index: 8888;}
+.tabletParallax {
+  position: absolute;
+  left: 630px;
+  top: 90px;
+  z-index: 777;
+}
+.notebookParallax {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
+
+.csheadingtext {background: $white; z-index: 999;}
 
 .skillblocks svg {font-size: 100px;}
 
@@ -94,6 +122,14 @@ p {color:$gray}
   font-weight: 900;
   text-align: center;
   margin-bottom: -10px;
+}
+
+.card {
+    -webkit-transition: opacity 2s ease-in;
+    -moz-transition: opacity 2s ease-in;
+    -o-transition: opacity 2s ease-in;
+    -ms-transition: opacity 2s ease-in;
+    transition: opacity 2s ease-in;
 }
 
 @font-face {
@@ -110,6 +146,14 @@ p {color:$gray}
 
 @media only screen and (max-width: 600px)  {
 
+p, h3 {padding: 0 30px;}
+h3 {font-size: 32px;}
+.CsHeader {font-size: 50px;}
+
+.ffNotebook {width: 100%; max-height: 400PX;}
+
+
+
 header h1 {
     left: 6%;
     top: 5%;
@@ -123,14 +167,24 @@ header h1 {
     font-family: DarkHeartScript;
     font-weight: lighter;
     z-index: 9999;
+    margin: 130px 0;
 }
 
 img.dude {
   position: ABSOLUTE;
   right: -6%;
-  bottom: -380px;
+  bottom: -284px;
   max-width: 600px;
-  z-index: 999;
+  z-index: 0;
+   animation: MoveUpDown 1s linear infinite;
+   @keyframes MoveUpDown {
+  0%, 100% {
+    bottom: -300px;
+  }
+  50% {
+    bottom: -320px;
+  }
+}
 }
 
 }
